# codoncanvas

./: .commitlintrc.ts  .dprint.jsonc  .eslintrc.json  .gitignore  .jscpd.json  .lefthook.yml  .stylelintrc.js  ACADEMIC_RESEARCH_PACKAGE.md  AGENTS.md  ASSESSMENTS.md  ASSESSMENT_SYSTEM.md  AUDIO_MODE.md  CHANGELOG.md  CICD_ASSESSMENT_README.md  CICD_DEVOPS_ASSESSMENT.md  CLI.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  DEVOPS_MATURITY_SUMMARY.md  EDUCATORS.md  GAMIFICATION_GUIDE.md  LAUNCH_BLOCKERS_QUICKFIX.md  LESSON_PLANS.md  LICENSE  MVP_Technical_Specification.md  OPCODES.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PILOT_PROGRAM_GUIDE.md  PRIVACY.md  PRODUCTION_READINESS_AUDIT.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_FOUNDATION.md  RESEARCH_METRICS.md  RUNBOOKS.md  SECURITY_FIXES_SUMMARY.md  STUDENT_HANDOUTS.md  (+33 more)
.github/: actionlint.yaml  copilot-instructions.md  labels.yml
.opencode/: opencode.jsonc
.serena/: project.yml
.zed/: settings.json
claudedocs/: ANNOUNCEMENT_TEMPLATES.md  BLOG_POST_DRAFT.md  DEVOPS_MATURITY_SUMMARY.md  DOCUMENTATION_ASSESSMENT.md  LAUNCH_READINESS_REPORT.md  POLISH_OPPORTUNITIES.md  PRODUCTION_READINESS_AUDIT.md  PROJECT_METRICS.md  QUICK_REFERENCE.md  RESEARCH_DATA_GUIDE.md  RESEARCH_FRAMEWORK.md  ROADMAP.md  SECURITY_FIXES_SUMMARY.md  SESSION_31_DEPLOYMENT_SUMMARY.md  SPEC_COMPLIANCE_AUDIT.md  STRATEGIC_ANALYSIS_SESSION_52.md  Session_67_Codon_Usage_Analyzer.md  TESTING_AUDIT_REPORT.md  VALIDATION_REPORT.md  bun-test-migration.md  complexity-analysis.json  data_collection_template.csv  dna_inspired_programming_language_proposal_summary.md  implementation-notes.md  security-audit-report.md  session-summary.md
css/: achievements-demo.css  assessment-demo.css  demo-base.css  demos.css  evolution-demo.css  gallery.css  genetic-algorithm-demo.css  index.css  learning-paths.css  mutation-demo.css  population-genetics-demo.css  research-dashboard.css  teacher-dashboard.css  timeline-demo.css  tutorial.css  variables.css
docs/: ACADEMIC_RESEARCH_PACKAGE.md  ASSESSMENTS.md  ASSESSMENT_SYSTEM.md  AUDIO_MODE.md  CHANGELOG.md  CICD_ASSESSMENT_README.md  CICD_DEVOPS_ASSESSMENT.md  CLI.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  EDUCATORS.md  GAMIFICATION_GUIDE.md  IDS_AMINO_ACID_ARCHITECTURE.md  LESSON_PLANS.md  METAPHOR_LIMITATIONS.md  MVP_Technical_Specification.md  OPCODES.md  PERFORMANCE.md  PRIVACY.md  (+9 more)
engine/: Cargo.toml  README.md
engine/core/: Cargo.toml
engine/core/src/: base.rs  codon.rs  examples.rs  genome.rs  lexer.rs  lib.rs  mutation.rs  opcode.rs  vm.rs
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs
(+851 files in other folders)
