[workspace]
resolver = "3"
members  = ["core", "wasm"]

[workspace.package]
version    = "0.1.0"
edition    = "2024"
repository = "https://github.com/kjanat/codoncanvas"
license    = "MIT"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level     = "s"
strip         = true
lto           = true
panic         = "abort"
codegen-units = 1
