[package]
name = "codoncanvas-core"
description = "Pure-Rust engine for the CodonCanvas DNA-inspired visual programming language: lexer, stack VM, mutation tools."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
