[package]
name = "codoncanvas-wasm"
description = "WebAssembly bindings for the CodonCanvas engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codoncanvas-core = { path = "../core" }
wasm-bindgen = "=0.2.123"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
