[package]
name                 = "codoncanvas-wasm"
version.workspace    = true
edition.workspace    = true
description          = "WebAssembly bindings for the CodonCanvas engine."
repository.workspace = true
license.workspace    = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codoncanvas-core         = { path = "../core" }
console_error_panic_hook = "0.1"
serde                    = { workspace = true }
serde-wasm-bindgen       = "0.6"
wasm-bindgen             = "=0.2.123"
